--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -379,23 +379,23 @@
 
 // *** Certificate details ***
 
-"subject-name" = "Subject Name";
-"country-or-region" = "Country or Region";
+"subject-name" = "Subject";
+"country-or-region" = "Country";
 "organisation" = "Organisation";
 "organisational-unit" = "Organisational Unit";
 "common-name" = "Common Name";
 "surname" = "Surname";
-"given-name" = "Given Name";
+"given-name" = "Given Names";
 "serial-number" = "Serial Number";
 "email-address" = "Email Address";
-"issuer-name" = "Issuer Name";
-"other-name" = "Other Name";
+"issuer-name" = "Issuer";
+"other-name" = "Organisation Identifier";
 "version" = "Version";
 "signature-algorithm" = "Signature Algorithm";
 "parameters" = "Parameters";
-"not-valid-before" = "Not Valid Before";
-"not-valid-after" = "Not Valid After";
-"public-key-info" = "Public Key Info";
+"not-valid-before" = "Valid from";
+"not-valid-after" = "Valid to";
+"public-key-info" = "Public Key";
 "algorithm" = "Algorithm";
 "public-key" = "Public-Key";
 "key-usage" = "Key Usage";
@@ -405,9 +405,8 @@
 "critical" = "Critical";
 "usage" = "Usage";
 "key-id" = "Key ID";
-"uri" = "URI";
+"uri" = "URL";
 "method" = "Method";
 "fingerprints" = "Fingerprints";
 "sha256" = "SHA-256";
 "sha1" = "SHA-1";
-
