--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -61,6 +61,7 @@
 "signing-error-incorrect-country-code" = "Vigane riigikood.";
 "signing-error-incorrect-phone-number" = "Telefoninumber pole korrektne.";
 "signing-error-incorrect-personal-code" = "Isikukood pole korrektne.";
+"signing-error-incorrect-pin-length" = "%@-kood peab olema vähemalt %i-kohaline.";
 
 // Signing view
 "signing-recent-containers" = "Hiljutised dokumendid";
