--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -61,6 +61,7 @@
 "signing-error-incorrect-country-code" = "Неверный код страны.";
 "signing-error-incorrect-phone-number" = "Телефонный номер не действителен.";
 "signing-error-incorrect-personal-code" = "Личный код недействителен.";
+"signing-error-incorrect-pin-length" = "%@-код должен быть не менее %i символов.";
 
 // Crypto
 "crypto-view-begin-label" = "Выберите файл для шифрования или расшифровки";
