--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -369,13 +369,13 @@
 "accessibility-introduction-screen-reader-introduction" = "Экранное считывающее устройство (также программа экранного чтения, или скрин-ридер) – это программа, задачей которой является преобразование изображаемой на экране смарт-устройства информации в подходящий для пользователя вид – например, речь. В первую очередь это вспомогательное средство предназначено для слабовидящих пользователей.";
 "accessibility-introduction-screen-reader-introduction-2" = "При построении приложения RIA DigiDoc учитывалась возможность преобразования визуального содержания любого типа в подходящий для пользователя вид. Например, картинки снабжены текстовыми описаниями, расположение и последовательность структурных элементов учитывает перемещение экранного считывающего устройства по экрану и позволят потреблять информацию в логической последовательности.";
 "accessibility-introduction-screen-reader-introduction-apps" = "Наиболее распространённые скрин-ридеры для смарт-устройств:";
-"accessibility-introduction-screen-reader-introduction-ios" = "VoiceOver (iOS, встроенный) https://support.apple.com/et-ee/guide/iphone/iph3e2e415f/ios";
-"accessibility-introduction-screen-reader-introduction-android" = "Talkback (Android, встроенный) https://support.google.com/accessibility/android/answer/6007100";
+"accessibility-introduction-screen-reader-introduction-ios" = "VoiceOver (iOS, встроенный) https://support.apple.com/ru-ru/guide/iphone/iph3e2e415f/ios";
+"accessibility-introduction-screen-reader-introduction-android" = "Talkback (Android, встроенный) https://support.google.com/accessibility/android/answer/6007100?hl=ru";
 "accessibility-introduction-screen-magnification-introduction-header" = "Увеличение экрана и изменение цветов";
 "accessibility-introduction-screen-magnification-introduction" = "Если слабовидящий пользователь видит достаточно для чтения текста, для более удобного просмотра экрана можно использовать встроенные в смарт-устройство вспомогательные средства. При помощи вспомогательных средств можно изменять размеры текстов, основной тип шрифта, цветовые решения интерфейса пользователя, а также можно увеличивать экран при помощи экранной лупы.";
 "accessibility-introduction-screen-magnification-screen-tools" = "Вспомогательные средства для регулировки цвета экрана и размера текста:";
-"accessibility-introduction-screen-magnification-screen-tools-ios" = "iOS https://support.apple.com/et-ee/guide/iphone/iph3e2e1fb0/ios";
-"accessibility-introduction-screen-magnification-screen-tools-android" = "Android https://support.google.com/accessibility/android/answer/11183305?hl=en&ref_topic=9079043";
+"accessibility-introduction-screen-magnification-screen-tools-ios" = "iOS https://support.apple.com/ru-ru/guide/iphone/iph3e2e1fb0/ios";
+"accessibility-introduction-screen-magnification-screen-tools-android" = "Android https://support.google.com/accessibility/android/answer/11183305?hl=ru&ref_topic=9079043";
 "accessibility-introduction-screen-magnification-tools" = "Вспомогательные средства для увеличения экрана:";
-"accessibility-introduction-screen-magnification-tools-ios" = "Zoom (iOS, встроенный) https://support.apple.com/et-ee/guide/iphone/iph3e2e367e/ios";
-"accessibility-introduction-screen-magnification-tools-android" = "Magnification (Android, встроенный) https://support.google.com/accessibility/android/answer/6006949";
+"accessibility-introduction-screen-magnification-tools-ios" = "Zoom (iOS, встроенный) https://support.apple.com/ru-ru/guide/iphone/iph3e2e367e/ios";
+"accessibility-introduction-screen-magnification-tools-android" = "Magnification (Android, встроенный) https://support.google.com/accessibility/android/answer/6006949?hl=ru";
