--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -56,6 +56,7 @@
 "signature-view-begin-label" = "Choose a file to sign or validate";
 "signature-view-begin-button" = "CHOOSE FILE";
 "signature-details-title" = "Signature details";
+"certificate-details-title" = "Certificate details";
 "menu-button" = "Menu";
 
 "signing-error-incorrect-country-code" = "Invalid country code.";
@@ -361,6 +362,61 @@
 "save-diagnostics" = "SAVE DIAGNOSTICS";
 "success-notification-dialog-label" = "To share the container click the \"SHARE\" button and choose your preferred application. All containers can also be found in the application settings \"Recent Documents\" folder.";
 "success-notification-dialog-dont-show-again" = "Don't show again";
+
+// *** Signature details ***
+
+"signer-certificate-issuer-label" = "Signer's Certificate issuer";
+"signers-certificate-label" = "Signer's Certificate";
+"signature-method-label" = "Signature method";
+"container-format-label" = "Container format";
+"signature-format-label" = "Signature format";
+"signed-file-count-label" = "Signed file count";
+"signature-timestamp-label" = "Signature timestamp";
+"signature-timestamp-utc-label" = "Signature timestamp (UTC)";
+"hash-value-of-signature-label" = "Hash value of signature";
+"ts-certificate-issuer-label" = "TS Certificate issuer";
+"ts-certificate-label" = "TS Certificate";
+"ocsp-certificate-issuer-label" = "OCSP Certificate issuer";
+"ocsp-certificate-label" = "OCSP Certificate";
+"ocsp-time-label" = "OCSP time";
+"ocsp-time-utc-label" = "OCSP time (UTC)";
+"signers-mobile-time-label" = "Signer's mobile time";
+
+
+// *** Certificate details ***
+
+"subject-name" = "Subject";
+"country-or-region" = "Country";
+"organisation" = "Organisation";
+"organisational-unit" = "Organisational Unit";
+"common-name" = "Common Name";
+"surname" = "Surname";
+"given-name" = "Given Names";
+"serial-number" = "Serial Number";
+"email-address" = "Email Address";
+"issuer-name" = "Issuer";
+"other-name" = "Organisation Identifier";
+"version" = "Version";
+"signature-algorithm" = "Signature Algorithm";
+"parameters" = "Parameters";
+"not-valid-before" = "Valid from";
+"not-valid-after" = "Valid to";
+"public-key-info" = "Public Key";
+"algorithm" = "Algorithm";
+"public-key" = "Public Key";
+"key-usage" = "Key Usage";
+"signature" = "Signature";
+"extension" = "Extension";
+"extensions" = "Extensions";
+"critical" = "Critical";
+"usage" = "Usage";
+"key-id" = "Key ID";
+"uri" = "URL";
+"method" = "Method";
+"fingerprints" = "Fingerprints";
+"sha256" = "SHA-256";
+"sha1" = "SHA-1";
+
 // ** Accessibility introduction **
 "accessibility-introduction-title" = "Accessibility";
 "accessibility-introduction" = "RIA DigiDoc is designed to comply with the WCAG 2.1 AA accessibility guidelines. This means that the RIA DigiDoc application has been developed using the principles that the application should be usable by the blind and people with visual, mobility, and strength impairments.";
