--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -56,6 +56,7 @@
 "signature-view-begin-label" = "Выберите файл для подписания или проверки";
 "signature-view-begin-button" = "ВЫБРАТЬ ФАЙЛ";
 "signature-details-title" = "Детали подписи";
+"certificate-details-title" = "Детали сертификата";
 "menu-button" = "Меню";
 
 "signing-error-incorrect-country-code" = "Неверный код страны.";
@@ -361,6 +362,61 @@
 "save-diagnostics" = "СОХРАНИТЬ ДИАГНОСТИКУ";
 "success-notification-dialog-label" = "Чтобы поделиться контейнером, нажмите кнопку «ПОДЕЛИТЬСЯ» и выберите нужное приложение. Все контейнеры можно найти в папке «Недавние документы» в настройках приложения.";
 "success-notification-dialog-dont-show-again" = "Больше не показывать";
+
+
+// *** Signature details ***
+
+"signer-certificate-issuer-label" = "Организация, выдавшая сертификат подписавшего";
+"signers-certificate-label" = "Сертификат пользователя";
+"signature-method-label" = "Метод подписи";
+"container-format-label" = "Формат контейнера";
+"signature-format-label" = "Формат подписи";
+"signed-file-count-label" = "Количество подписанных файлов";
+"signature-timestamp-label" = "Временной штамп подписи";
+"signature-timestamp-utc-label" = "Временной штамп подписи (UTC)";
+"hash-value-of-signature-label" = "Хэш значение подтверждения подлинности подписи";
+"ts-certificate-issuer-label" = "Издатель сертификата временного штампа";
+"ts-certificate-label" = "Сертификат временного штампа";
+"ocsp-certificate-issuer-label" = "Организация, выдавшая сертификат OCSP";
+"ocsp-certificate-label" = "Сертификат OCSP";
+"ocsp-time-label" = "Время подтверждения подлинности подписи";
+"ocsp-time-utc-label" = "Время подтверждения подлинности подписи (UTC)";
+"signers-mobile-time-label" = "Время на мобильном телефоне подписывающего (UTC)";
+
+// *** Certificate details ***
+
+"subject-name" = "Субъект";
+"country-or-region" = "Страна";
+"organisation" = "Организация";
+"organisational-unit" = "Подразделение";
+"common-name" = "Общее имя";
+"surname" = "Фамилия";
+"given-name" = "Имена";
+"serial-number" = "Серийный номер";
+"email-address" = "Адрес электронной почты";
+"issuer-name" = "Выдавший";
+"other-name" = "Идентификатор организации";
+"version" = "Версия";
+"signature-algorithm" = "Алгоритм подписи";
+"parameters" = "Параметры";
+"not-valid-before" = "Действительно с";
+"not-valid-after" = "Действительно до";
+"public-key-info" = "Информация об открытом ключе";
+"algorithm" = "Алгоритм";
+"public-key" = "Открытый ключ";
+"key-usage" = "Использование ключа";
+"signature" = "Подпись";
+"extension" = "Расширение";
+"extensions" = "Расширения";
+"critical" = "Критический";
+"usage" = "Использование";
+"key-id" = "Идентификатор \tключа";
+"uri" = "URL";
+"method" = "Метод";
+"fingerprints" = "Отпечатки";
+"sha256" = "SHA-256";
+"sha1" = "SHA-1";
+
 // ** Accessibility introduction **
 "accessibility-introduction-title" = "Доступность";
 "accessibility-introduction" = "Приложение RIA DigiDoc построено таким образом, чтобы оно соответствовало протоколам доступа WCAG 2.1 AA. Это означает, что при разработке RIA DigiDoc соблюдались принципы, позволяющие использовать приложение неспособным видеть и слабовидящим пользователям, лицам с ограничением двигательной функции или силы и т. п.";
