--- a/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/ru.lproj/Localizable.strings
@@ -36,14 +36,14 @@
 "mid-rest-error-exceeded-unsuccessful-requests" = "Не удалось отправить запрос. Превышено количество неудачных запросов с этого IP-адреса. Пожалуйста, попробуйте позже.";
 "mid-rest-error-ocsp-invalid-time-slot" = "Пожалуйста, проверьте время на своем смарт-устройстве. https://www.id.ee/ru/artikkel/oshibka-ria-digidoc-pozhalujsta-proverte-vremya-na-svoem-smart-ustrojstve/";
 "mid-rest-error-invalid-ssl-cert" = "Не удалось создать SSL канал передачи данных. Проверьте настройки вашего приложения или обновления программного обеспечения";
-"mid-rest-error-invalid-access-rights" = "Не удалось подписать контейнер. Проверьте настройки доступа услуги mobiil-ID. https://www.id.ee/ru/artikkel/dlya-uchrezhdenij-v-kotoryh-v-bolshom-obeme-podpisyvayutsya-dokumenty-s-pomoshhyu-digidoc4-klienta/";
+"mid-rest-error-invalid-access-rights" = "Проверьте настройки доступа услуги mobiil-ID. https://www.id.ee/ru/artikkel/dlya-uchrezhdenij-v-kotoryh-v-bolshom-obeme-podpisyvayutsya-dokumenty-s-pomoshhyu-digidoc4-klienta/";
 "mid-rest-error-technical-error" = "Не удалось отправить запрос. Технический сбой услуги mobiil-ID. Пожалуйста, попробуйте позже.";
-"sid-rest-error-invalid-access-rights" = "Не удалось подписать контейнер. Проверьте настройки доступа услуги Smart-ID. https://www.id.ee/ru/artikkel/dlya-uchrezhdenij-v-kotoryh-v-bolshom-obeme-podpisyvayutsya-dokumenty-s-pomoshhyu-digidoc4-klienta/";
+"sid-rest-error-invalid-access-rights" = "Проверьте настройки доступа услуги Smart-ID. https://www.id.ee/ru/artikkel/dlya-uchrezhdenij-v-kotoryh-v-bolshom-obeme-podpisyvayutsya-dokumenty-s-pomoshhyu-digidoc4-klienta/";
 "sid-rest-error-wrong-vc" = "Ошибка: выбран неправильный контрольный код";
 "sid-rest-error-document-unusable" = "Не удалось выполнить операцию Smart-ID. Пожалуйста, проверьте приложение Smart-ID или свяжитесь со службой поддержки Smart-ID.";
 "sid-rest-error-not-qualified" = "Для проставления подписи в мобильном приложении RIA DigiDoc, ваш Smart-ID должен соответствовать уровню \"высокий\".";
 "sid-rest-error-old-api" = "Мобильное приложение RIA DigiDoc нуждается в обновлении. Пожалуйста, установите новую версию из магазина мобильных приложений. Дополнительную информацию можно получить по телефону (+372) 666 8888.";
 "sid-rest-error-under-maintenance" = "Не удалось отправить запрос. Технический сбой услуги Smart-ID. Пожалуйста, попробуйте позже.";
-"sid-rest-error-forbidden" = "Не удалось подписать контейнер. Проверьте настройки доступа услуги Smart-ID. https://www.id.ee/ru/artikkel/dlya-uchrezhdenij-v-kotoryh-v-bolshom-obeme-podpisyvayutsya-dokumenty-s-pomoshhyu-digidoc4-klienta/";
-"sid-rest-error-account-not-found-or-timeout" = "Не удалось подписать контейнер. Срок действия вашей операции Smart-ID истек или учетная запись не найдена.";
+"sid-rest-error-forbidden" = "Проверьте настройки доступа услуги Smart-ID. https://www.id.ee/ru/artikkel/dlya-uchrezhdenij-v-kotoryh-v-bolshom-obeme-podpisyvayutsya-dokumenty-s-pomoshhyu-digidoc4-klienta/";
+"sid-rest-error-account-not-found-or-timeout" = "Срок действия вашей операции Smart-ID истек или учетная запись не найдена.";
 "sid-rest-error-certificate-revoked" = "Сертификат недействителен";
