--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -372,6 +372,9 @@
 "success-notification-dialog-label" = "Ümbriku jagamiseks klõpsa \"JAGA\" nupul ning vali soovitud rakendus. Kõik ümbrikud on leitavad ka rakenduse seadetes asuvas \"Hiljutised dokumendid\" kaustast.";
 "success-notification-dialog-dont-show-again" = "Ära rohkem näita";
 
+// ** Images **
+"digidoc-image-accessibility" = "DigiDoc";
+
 // *** Signature details ***
 
 "signer-certificate-issuer-label" = "Allkirjastaja sertifikaadi väljaandja";
