--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -125,7 +125,7 @@
 "file-import-open-existing-failed-alert-title" = "Ümbriku laadimine ebaõnnestus";
 "file-import-open-existing-failed-alert-message" = "Dokumendi %@ avamine ebaõnnestus";
 "file-import-create-new-failed-alert-title" = "Ümbriku loomine ebaõnnestus";
-"file-import-create-new-failed-alert-message" = "%@ laadimine ebaõnnesus";
+"file-import-create-new-failed-alert-message" = "%@ laadimine ebaõnnestus";
 "file-import-new-file-opening-failed-alert-message" = "Faili %@ avamine ebaõnnestus";
 "file-import-remove-file" = "Eemalda fail";
 "file-import-save-file" = "Salvesta fail ümbrikust";
