--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -348,6 +348,11 @@
 "settings-timestamp-url-placeholder" = "";
 "settings-timestamp-use-default-title" = "Kasuta vaikeväärtust";
 "settings-value-changed" = "Seade väärtus muudetud";
+"settings-timestamp-cert-title" = "Ajatempliteenuse SSL sertifikaat";
+"settings-timestamp-cert-issued-to-label" = "Kellele väljastatud:";
+"settings-timestamp-cert-valid-to-label" = "Kehtib kuni:";
+"settings-timestamp-cert-add-certificate-button" = "LISA SERTIFIKAAT";
+"settings-timestamp-cert-show-certificate-button" = "NÄITA SERTIFIKAATI";
 "diagnostics-title" = "Diagnostika";
 "diagnostics-activate-one-time-logging" = "Aktiveeri ühekordne logifaili genereerimine";
 "diagnostics-save-log" = "SALVESTA LOGIFAIL";
