--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -78,6 +78,7 @@
 "crypto-recipient-found" = "Получатель найден";
 "crypto-recipients-found" = "%@ получатели найдены";
 "crypto-recipient-added" = "Получатель добавлен";
+"crypto-recipients-added" = "Получатели добавлены";
 "crypto-recipient-removed" = "Получатель удален";
 "crypto-recipient-adding-cancelled" = "Добавление получателя отменено";
 "crypto-no-addressees-warning" = "Не добавлено ни одного получателя";
@@ -90,6 +91,7 @@
 "crypto-add-addressee-button-title" = "ДОБАВИТЬ";
 "crypto-add-addressee-button-title-accessibility" = "ДОБАВИТЬ ПОЛУЧАТЕЛЯ";
 "crypto-addressee-added-button-title" = "ДОБАВЛЕН";
+"crypto-addressee-add-all-button" = "ДОБАВИТЬ ВСЕ";
 
 // Signing view
 "signing-recent-containers" = "Недавние документы";
